# nats.c

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CLAUDE.md  CMakeLists.txt  GOVERNANCE.md  LICENSE  MAINTAINERS.md  Makefile  OWNERS  README.md  TODO.md  annotated.html  annotated_dup.js  buildOnTravis.sh  classes.html  codecov.yml  dependencies.md  deprecated.html  dir_085924db4bed469054a9264cf96b0d5e.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_a4e2ca728ed9ca047adfae9da8ecaea5.html  files.html  files.js  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_h.html  functions_i.html  functions_k.html  functions_l.html  functions_m.html  functions_n.html  functions_o.html  functions_p.html  functions_q.html  (+283 more)
.github/: on-pr-merged-main.yml
adapters/: libuv.h
bench/: CMakeLists.txt  bench.h  diffstat.go  sub-async.c
doc/: DoxyFile.NATS.Client  DoxyFile.NATS.Client.bak  DoxyFile.NATS.Client.in  footer.html  header.html
examples/: CMakeLists.txt  asynctimeout.c  check_cpp.cpp  connect.c  examples.h  js-microservice.c  js-pub.c  js-sub.c  libevent-js-sub.c  libevent-pub.c  libevent-sub.c  libuv-pub.c  libuv-sub.c  micro-arithmetics.c  micro-func.c  micro-hello.c  micro-multi.c  micro-sequence.c  micro-stats.c  micro_args.h  microservice.c  mtls-publisher.c  mtls-subscriber.c  publisher.c  queuegroup.c  replier.c  requestor.c  subscriber.c
examples/adapters/: libuv.h
examples/cpp/: CMakeLists.txt  subscriber.cpp
examples/docs/: CMakeLists.txt  basics_publish.c  basics_subscribe.c  getting_started_publish.c  getting_started_subscribe.c  jetstream_basic.c  learn_backup_recovery_disaster_recovery_checkLag.c  learn_backup_recovery_stream_backup_restore_verify_counts.c  learn_clustering_placement_placeTags.c  learn_clustering_placement_verifyTags.c  learn_clustering_replication_and_r3_createR3.c  learn_clustering_replication_and_r3_inspectReplicas.c  learn_clustering_scaling_and_peers_peerRemove.c  learn_core_nats_connecting_connect_and_name.c  learn_core_nats_connecting_see_the_handshake.c  learn_core_nats_connection_lifecycle_lame_duck_signal.c  learn_core_nats_connection_lifecycle_observe_reconnect.c  learn_core_nats_headers_publish.c  learn_core_nats_headers_request.c  learn_core_nats_headers_subscribe.c  learn_core_nats_publish_subscribe_check_max_payload.c  learn_core_nats_publish_subscribe_publish.c  learn_core_nats_publish_subscribe_subscribe.c  learn_core_nats_publish_subscribe_unsubscribe_after_n.c  learn_core_nats_queue_groups_queue_subscribe.c  learn_core_nats_queue_groups_typo_splits_group.c  learn_core_nats_request_reply_replies.c  learn_core_nats_request_reply_request.c  learn_core_nats_request_reply_respond.c  learn_core_nats_scatter_gather_first_reply_trap.c  learn_core_nats_scatter_gather_gather.c  learn_core_nats_scatter_gather_provider.c  learn_core_nats_subjects_and_wildcards_invalid_subject_whitespace.c  learn_core_nats_subjects_and_wildcards_wildcard_multi.c  learn_core_nats_subjects_and_wildcards_wildcard_single.c  learn_deployment_hardening_credsConnect.c  learn_deployment_kubernetes_streamLs.c  learn_deployment_rolling_upgrades_requestDuringUpgrade.c  learn_deployment_rolling_upgrades_streamReplicas.c  learn_deployment_sizing_and_resources_accountInfo.c  (+138 more)
examples/getstarted/: CMakeLists.txt  asyncsub.c  headers.c  pubbytes.c  pubmsg.c  pubstr.c  replier.c  requestor.c  syncsub.c
examples/stan/: CMakeLists.txt  pub-async.c  pub.c  sub.c
html/: annotated.html  deprecated.html  functions_t.html  functions_vars_h.html  functions_vars_o.html  globals_dup.js  globals_func_k.html  globals_func_s.html  globals_type.html  group__conn_group.js  group__conn_mgt_group.js  group__conn_pub_group.html  group__conn_sub_group.js  group__func_group.js  group__js_group.html  group__js_pub_group.html  group__js_pub_group.js  group__js_sub_group.html  group__kv_entry.html  group__kv_group.js  group__kv_group_mgt.html  group__kv_watcher.html  group__kv_watcher.js  group__libevent_functions.html  group__msg_group.html  group__stan_msg_group.js  group__stan_sub_group.html  group__status_group.html  libevent_8h.js  libuv_8h.html  nats_8h.html  navtreeindex4.js  structjs_a_p_i_stats.js  structjs_consumer_config.html  (+34 more)
src/: CMakeLists.txt  asynccb.c  asynccb.h  buf.c  buf.h  cert.c  cert.h  comsock.c  comsock.h  conn.c  conn.h  conn_parse.c  conn_read.c  conn_write.c  conn_write.h  crypto.c  crypto.h  deprnats.h  dev_mode.h  dispatch.c  dispatch.h  err.h  external_utils.h  gc.h  hash.c  hash.h  js.c  js.h  jsm.c  json.h  json_get.c  json_marshal.c  json_parse.c  json_unmarshal.c  kv.c  kv.h  libnats.pc.in  mem.h  mem_pool.c  mem_pool.h  (+57 more)
src/adapters/: libevent.h  libuv.h
src/bindings/: cpp_generator.py  cpp_template.mako
src/glib/: glib.c  glib.h  glib_async_cb.c  glib_dispatch_pool.c  glib_gc.c  glib_last_error.c  glib_ssl.c  glib_timer.c  glibp.h
src/include/: n-unix.h  n-win.h
src/nats/: nats.h  nats_base.h  nats_mem.h  nats_msg.h  nats_net.h  nats_opts.h  nats_status.h  nats_version.h
src/nats/adapters/: libevent.h  libuv.h  malloc_heap.h
src/stan/: conn.c  conn.h  copts.c  copts.h  msg.c  msg.h  protocol.pb-c.c  protocol.pb-c.h  pub.c  pub.h  sopts.c  sopts.h  stanp.h  sub.c  sub.h
src/unix/: cond.c  mutex.c  sock.c  thread.c
src/win/: cond.c  mutex.c  sock.c  strings.c  thread.c
test/: CMakeLists.txt  all_tests.h  all_tests.txt  bench.c  bench_sub_async.c  conn_write_test.c  diffstat_sub_async.go  flappers.txt  json_test.c  list.h  list.txt  list_bench.txt  list_stan.txt  list_test.txt  main_test.c  mem_test.c  no-sanitize.txt  permissions.conf  permissions_request.conf  test-shutdown.cpp  test.c  test.h  tls.conf  tls_default_port.conf  tls_noip.conf  tlsfirst.conf  tlsverify.conf  valgrind.sup  valgrind_travis.sup
test/certs/: ca.pem  client-cert.pem  client-cert2.pem  client-key2.pem  server-cert.pem  server-noip.pem
test/check_cpp/: CMakeLists.txt  check_cpp.cpp
test/dylib/: CMakeLists.txt  nonats.c
test/no_crash_on_exit/: CMakeLists.txt  nocrashonexit.c  run.sh
(+893 files in other folders)
